basic layout version 1

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GamesHub - Home</title>
+    <title>GamesToday - Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Work in Progress
+    <h1>Welcome to GamesToday</h1>
+    <button id="login-button">Login</button><button id="signup-button">Sign Up</button>
 </body>
 </html>
